# anki-addon-builder

./: .gitignore  .isort.cfg  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS  LICENSE  Makefile  README.md  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
aab/: __init__.py  builder.py  cli.py  config.py  git.py  legacy.py  manifest.py  schema.json  types.py  ui.py  utils.py
aab/config/: model.py
aab/manifest/: manifest.py  model.py
aab/project/: model.py  properties.py
aab/schemas/: addon.schema.json  manifest.schema.json
aab/shared/: types.py  validators.py
docs/schemas/: README.md  addon-properties-ankiweb_id.md  addon-properties-author.md  addon-properties-conflicting-add-ons-items.md  addon-properties-conflicting-add-ons.md  addon-properties-contact.md  addon-properties-copyright_start.md  addon-properties-display_name.md  addon-properties-homepage.md  addon-properties-local_name_suffix.md  addon-properties-max_anki_version.md  addon-properties-min_anki_version.md  addon-properties-module_name.md  addon-properties-repo_name.md  addon-properties-tags.md  addon-properties-tested_anki_version.md  addon-properties-version.md  addon-properties.md  addon.md  manifest-properties-ankiweb_id.md  manifest-properties-author.md  manifest-properties-branch_index.md  manifest-properties-conflicting-add-ons-items.md  manifest-properties-conflicting-add-ons.md  manifest-properties-homepage.md  manifest-properties-human_version.md  manifest-properties-max_point_version.md  manifest-properties-min_point_version.md  manifest-properties-mod.md  manifest-properties-name.md  manifest-properties-package.md  manifest-properties-version.md  manifest-properties.md  manifest.md
schemas/: manifest.schema.json
tests/: __init__.py  conftest.py  test_legacy.py  test_manifest.py  test_project.py  test_ui.py  util.py
tests/config/: test_config.py
tests/data/project-with-no-forms/: addon.json
tests/data/sample-project/designer/: dialog.ui
tests/data/sample-project/resources/: icons.qrc
tests/test-data/addons/default/src/sample_addon/: __init__.py
tests/test-data/configs/correct/: basic.json  minimal.json
tests/test-data/configs/incorrect/: incomplete.json
tools/: build_docs.sh
