[tool.poetry]
name = "anki-addon-builder"
version = "1.0.0-dev.1"
description = "A build tool for Anki add-ons"
authors = ["Aristotelis P. (Glutanimate) and contributors"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/glutanimate/anki-addon-builder"
homepage = "https://github.com/glutanimate/anki-addon-builder"
readme = "README.md"
keywords = ["anki", "development", "building", "packaging", "build-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Intended Audience :: Developers",
]
packages = [
    { include = "aab" }
]

[tool.poetry.scripts]
aab = 'aab.cli:main'

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/glutanimate/anki-addon-builder/issues"
"Funding" = "https://glutanimate.com/support-my-work/"

[tool.poetry.dependencies]
python = "^3.8"
jsonschema = "^4.1.0"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
PyQt5 = "^5.15.4"
PyQt6 = "^6.2.0"
pytest = "^6.2.5"
pytest-datafiles = "^2.0"
autoflake = "^1.4"
isort = "^5.9.3"
mypy = "^0.910"
flake8 = "^4.0.1"
black = "^21.9b0"
datamodel-code-generator = "^0.11.14"

[tool.poetry.extras]
qt5 = ["PyQt5"]
qt6 = ["PyQt6"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
show_error_codes = true
ignore_missing_imports = true
follow_imports = "silent"
show_column_numbers = true
exclude = "tests/test-data/"

[tool.black]
exclude = "tests/test-data/"
experimental-string-processing = true

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
line_length=88
ensure_newline_before_comments=true
skip_glob = "tests/test-data/**"
known_first_party = "aab"

[tool.pytest.ini_options]
markers = ["datafiles: load datafiles"]
